# Chat

./: .gitignore  Cargo.toml  README.md  config.toml
client/: main.py
clients/gotui/: build  client  client.go  go.mod
clients/tui/: .env  main.py
clients/web/: index.html
src/: auth.rs  config.rs  handler.rs  main.rs  network.rs  protocol.rs
src/atomic/: queue.rs
