[package]
name = "CicadaCat"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
paris = "1.5.15"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
